-MIA-PROYECTO1_201113915/Bison/parser.output
Gramática

    0 $accept: Start $end

    1 Start: NT_Instructions

    2 NT_Instructions: NT_Instructions NT_Instruction
    3                | NT_Instruction

    4 NT_Instruction: NT_Cat
    5               | NT_Chgrp
    6               | NT_Chmod
    7               | NT_Chown
    8               | NT_Cp
    9               | NT_Edit
   10               | NT_Exec
   11               | NT_Fdisk
   12               | NT_Find
   13               | NT_Login
   14               | NT_Logout
   15               | NT_Loss
   16               | NT_Mkdir
   17               | NT_Mkdisk
   18               | NT_Mkfile
   19               | NT_Mkfs
   20               | NT_Mkgrp
   21               | NT_Mkusr
   22               | NT_Mount
   23               | NT_Mv
   24               | NT_Pause
   25               | NT_Recovery
   26               | NT_Rm
   27               | NT_Ren
   28               | NT_Rep
   29               | NT_Rmdisk
   30               | NT_Rmgrp
   31               | NT_Rmusr
   32               | NT_Unmount

   33 NT_Cat: RW_Cat NT_Parameterscat

   34 NT_Parameterscat: NT_Parameterscat SYM_Ampersand NT_Parametercat
   35                 | SYM_Ampersand NT_Parametercat

   36 NT_Parametercat: RW_Id SYM_Arrow RE_Id
   37                | RW_Filen SYM_Arrow RE_String
   38                | RW_Filen SYM_Arrow RE_Path

   39 NT_Chgrp: RW_Chgrp NT_Parameterschgrp

   40 NT_Parameterschgrp: NT_Parameterschgrp SYM_Ampersand NT_Parameterchgrp
   41                   | SYM_Ampersand NT_Parameterchgrp

   42 NT_Parameterchgrp: RW_Usr SYM_Arrow RE_Id
   43                  | RW_Usr SYM_Arrow RE_String
   44                  | RW_Grp SYM_Arrow RE_Id
   45                  | RW_Grp SYM_Arrow RE_String

   46 NT_Chmod: RW_Chmod NT_Parameterschmod

   47 NT_Parameterschmod: NT_Parameterschmod SYM_Ampersand NT_Parameterchmod
   48                   | SYM_Ampersand NT_Parameterchmod

   49 NT_Parameterchmod: RW_Path SYM_Arrow RE_Path
   50                  | RW_Path SYM_Arrow RE_String
   51                  | RW_Id SYM_Arrow RE_Id
   52                  | RW_Ugo SYM_Arrow RE_Number
   53                  | RW_R

   54 NT_Chown: RW_Chown NT_Parameterschown

   55 NT_Parameterschown: NT_Parameterschown SYM_Ampersand NT_Parameterchown
   56                   | SYM_Ampersand NT_Parameterchown

   57 NT_Parameterchown: RW_Path SYM_Arrow RE_Path
   58                  | RW_Path SYM_Arrow RE_String
   59                  | RW_Id SYM_Arrow RE_Id
   60                  | RW_R
   61                  | RW_Usr SYM_Arrow RE_Id
   62                  | RW_Usr SYM_Arrow RE_String

   63 NT_Cp: RW_Cp NT_Parameterscp

   64 NT_Parameterscp: NT_Parameterscp SYM_Ampersand NT_Parametercp
   65                | SYM_Ampersand NT_Parametercp

   66 NT_Parametercp: RW_Path SYM_Arrow RE_Path
   67               | RW_Path SYM_Arrow RE_String
   68               | RW_Id SYM_Arrow RE_Id
   69               | RW_Destiny SYM_Arrow RE_Path
   70               | RW_Destiny SYM_Arrow RE_String

   71 NT_Edit: RW_Edit NT_Parametersedit

   72 NT_Parametersedit: NT_Parametersedit SYM_Ampersand NT_Parameteredit
   73                  | SYM_Ampersand NT_Parameteredit

   74 NT_Parameteredit: RW_Path SYM_Arrow RE_Path
   75                 | RW_Path SYM_Arrow RE_String
   76                 | RW_Id SYM_Arrow RE_Id
   77                 | RW_Size SYM_Arrow RE_Number
   78                 | RW_Cont SYM_Arrow RE_String

   79 NT_Exec: RW_Exec SYM_Ampersand RW_Path SYM_Arrow RE_Path
   80        | RW_Exec SYM_Ampersand RW_Path SYM_Arrow RE_String

   81 NT_Fdisk: RW_Fdisk NT_Parametersfdisk

   82 NT_Parametersfdisk: NT_Parametersfdisk SYM_Ampersand NT_Parameterfdisk
   83                   | SYM_Ampersand NT_Parameterfdisk

   84 NT_Parameterfdisk: RW_Size SYM_Arrow RE_Number
   85                  | RW_Unit SYM_Arrow RE_Unit
   86                  | RW_Path SYM_Arrow RE_Path
   87                  | RW_Path SYM_Arrow RE_String
   88                  | RW_Type SYM_Arrow RE_Type
   89                  | RW_Type SYM_Arrow RW_P
   90                  | RW_Fit SYM_Arrow RE_Fit
   91                  | RW_Delete SYM_Arrow RE_Delete
   92                  | RW_Name SYM_Arrow RE_String
   93                  | RW_Name SYM_Arrow RE_Id
   94                  | RW_Add SYM_Arrow RE_Number
   95                  | RW_Add SYM_Arrow SYM_Hyphen RE_Number

   96 NT_Find: RW_Find NT_Parametersfind

   97 NT_Parametersfind: NT_Parametersfind SYM_Ampersand NT_Parameterfind
   98                  | SYM_Ampersand NT_Parameterfind

   99 NT_Parameterfind: RW_Path SYM_Arrow RE_Path
  100                 | RW_Path SYM_Arrow RE_String
  101                 | RW_Id SYM_Arrow RE_Id
  102                 | RW_Name SYM_Arrow RE_Name2
  103                 | RW_Name SYM_Arrow RE_String

  104 NT_Login: RW_Login NT_Parameterslogin

  105 NT_Parameterslogin: NT_Parameterslogin SYM_Ampersand NT_Parameterlogin
  106                   | SYM_Ampersand NT_Parameterlogin

  107 NT_Parameterlogin: RW_Usr SYM_Arrow RE_Id
  108                  | RW_Usr SYM_Arrow RE_String
  109                  | RW_Pwd SYM_Arrow RE_Id
  110                  | RW_Pwd SYM_Arrow RE_String
  111                  | RW_Pwd SYM_Arrow RE_Number
  112                  | RW_Id SYM_Arrow RE_Id

  113 NT_Logout: RW_Logout

  114 NT_Loss: RW_Loss SYM_Ampersand RW_Id SYM_Arrow RE_Id

  115 NT_Mkdir: RW_Mkdir NT_Parametersmkdir

  116 NT_Parametersmkdir: NT_Parametersmkdir SYM_Ampersand NT_Parametermkdir
  117                   | SYM_Ampersand NT_Parametermkdir

  118 NT_Parametermkdir: RW_Path SYM_Arrow RE_Path
  119                  | RW_Path SYM_Arrow RE_String
  120                  | RW_Id SYM_Arrow RE_Id
  121                  | RW_P

  122 NT_Mkdisk: RW_Mkdisk NT_Parametersmkdisk

  123 NT_Parametersmkdisk: NT_Parametersmkdisk SYM_Ampersand NT_Parametermkdisk
  124                    | SYM_Ampersand NT_Parametermkdisk

  125 NT_Parametermkdisk: RW_Size SYM_Arrow RE_Number
  126                   | RW_Unit SYM_Arrow RE_Unit
  127                   | RW_Path SYM_Arrow RE_String
  128                   | RW_Path SYM_Arrow RE_Path
  129                   | RW_Name SYM_Arrow RE_Name2
  130                   | RW_Name SYM_Arrow RE_String

  131 NT_Mkfile: RW_Mkfile NT_Parametersmkfile

  132 NT_Parametersmkfile: NT_Parametersmkfile SYM_Ampersand NT_Parametermkfile
  133                    | SYM_Ampersand NT_Parametermkfile

  134 NT_Parametermkfile: RW_Path SYM_Arrow RE_Path
  135                   | RW_Path SYM_Arrow RE_String
  136                   | RW_Id SYM_Arrow RE_Id
  137                   | RW_P
  138                   | RW_Size SYM_Arrow RE_Number
  139                   | RW_Cont SYM_Arrow RE_String

  140 NT_Mkfs: RW_Mkfs NT_Parametersmkfs

  141 NT_Parametersmkfs: NT_Parametersmkfs SYM_Ampersand NT_Parametermkfs
  142                  | SYM_Ampersand NT_Parametermkfs

  143 NT_Parametermkfs: RW_Id SYM_Arrow RE_Id
  144                 | RW_Type SYM_Arrow RE_Delete

  145 NT_Mkgrp: RW_Mkgrp NT_Parametersmkgrp

  146 NT_Parametersmkgrp: NT_Parametersmkgrp SYM_Ampersand NT_Parametermkgrp
  147                   | SYM_Ampersand NT_Parametermkgrp

  148 NT_Parametermkgrp: RW_Id SYM_Arrow RE_Id
  149                  | RW_Name SYM_Arrow RE_Id
  150                  | RW_Name SYM_Arrow RE_String

  151 NT_Mkusr: RW_Mkusr NT_Parametersmkusr

  152 NT_Parametersmkusr: NT_Parametersmkusr SYM_Ampersand NT_Parametermkusr
  153                   | SYM_Ampersand NT_Parametermkusr

  154 NT_Parametermkusr: RW_Usr SYM_Arrow RE_Id
  155                  | RW_Usr SYM_Arrow RE_String
  156                  | RW_Id SYM_Arrow RE_Id
  157                  | RW_Pwd SYM_Arrow RE_Id
  158                  | RW_Pwd SYM_Arrow RE_String
  159                  | RW_Pwd SYM_Arrow RE_Number
  160                  | RW_Grp SYM_Arrow RE_Id
  161                  | RW_Grp SYM_Arrow RE_String

  162 NT_Mount: RW_Mount NT_Parametersmount

  163 NT_Parametersmount: NT_Parametersmount SYM_Ampersand NT_Parametermount
  164                   | SYM_Ampersand NT_Parametermount

  165 NT_Parametermount: RW_Path SYM_Arrow RE_Path
  166                  | RW_Path SYM_Arrow RE_String
  167                  | RW_Name SYM_Arrow RE_String
  168                  | RW_Name SYM_Arrow RE_Id

  169 NT_Mv: RW_Mv NT_Parametersmv

  170 NT_Parametersmv: NT_Parametersmv SYM_Ampersand NT_Parametermv
  171                | SYM_Ampersand NT_Parametermv

  172 NT_Parametermv: RW_Path SYM_Arrow RE_Path
  173               | RW_Path SYM_Arrow RE_String
  174               | RW_Destiny SYM_Arrow RE_Path
  175               | RW_Destiny SYM_Arrow RE_String
  176               | RW_Id SYM_Arrow RE_Id

  177 NT_Pause: RW_Pause

  178 NT_Recovery: RW_Recovery SYM_Ampersand RW_Id SYM_Arrow RE_Id

  179 NT_Ren: RW_Ren NT_Parametersren

  180 NT_Parametersren: NT_Parametersren SYM_Ampersand NT_Parameterren
  181                 | SYM_Ampersand NT_Parameterren

  182 NT_Parameterren: RW_Path SYM_Arrow RE_Path
  183                | RW_Path SYM_Arrow RE_String
  184                | RW_Id SYM_Arrow RE_Id
  185                | RW_Name SYM_Arrow RE_Name2
  186                | RW_Name SYM_Arrow RE_String

  187 NT_Rep: RW_Rep NT_Parametersrep

  188 NT_Parametersrep: NT_Parametersrep SYM_Ampersand NT_Parameterrep
  189                 | SYM_Ampersand NT_Parameterrep

  190 NT_Parameterrep: RW_Name SYM_Arrow RE_Name
  191                | RW_Name SYM_Arrow RW_File
  192                | RW_Path SYM_Arrow RE_Path
  193                | RW_Path SYM_Arrow RE_String
  194                | RW_Id SYM_Arrow RE_Id
  195                | RW_Ruta SYM_Arrow RE_Path
  196                | RW_Ruta SYM_Arrow RE_String

  197 NT_Rm: RW_Rm NT_Parametersrm

  198 NT_Parametersrm: NT_Parametersrm SYM_Ampersand NT_Parameterrm
  199                | SYM_Ampersand NT_Parameterrm

  200 NT_Parameterrm: RW_Path SYM_Arrow RE_Path
  201               | RW_Path SYM_Arrow RE_String
  202               | RW_Id SYM_Arrow RE_Id
  203               | RW_Rf

  204 NT_Rmdisk: RW_Rmdisk SYM_Ampersand RW_Path SYM_Arrow RE_String
  205          | RW_Rmdisk SYM_Ampersand RW_Path SYM_Arrow RE_Path

  206 NT_Rmgrp: RW_Rmgrp NT_Parametersrmgrp

  207 NT_Parametersrmgrp: NT_Parametersrmgrp SYM_Ampersand NT_Parameterrmgrp
  208                   | SYM_Ampersand NT_Parameterrmgrp

  209 NT_Parameterrmgrp: RW_Name SYM_Arrow RE_Id
  210                  | RW_Name SYM_Arrow RE_String
  211                  | RW_Id SYM_Arrow RE_Id

  212 NT_Rmusr: RW_Rmusr NT_Parametersrmusr

  213 NT_Parametersrmusr: NT_Parametersrmusr SYM_Ampersand NT_Parameterrmusr
  214                   | SYM_Ampersand NT_Parameterrmusr

  215 NT_Parameterrmusr: RW_Usr SYM_Arrow RE_Id
  216                  | RW_Usr SYM_Arrow RE_String
  217                  | RW_Id SYM_Arrow RE_Id

  218 NT_Unmount: RW_Unmount NT_Parametersunmount

  219 NT_Parametersunmount: NT_Parametersunmount SYM_Ampersand NT_Parameterunmount
  220                     | SYM_Ampersand NT_Parameterunmount

  221 NT_Parameterunmount: RW_Idn SYM_Arrow RE_Id


Terminales con las reglas donde aparecen

$end (0) 0
error (256)
RW_Add (258) 94 95
RW_Cat (259) 33
RW_Chgrp (260) 39
RW_Chmod (261) 46
RW_Chown (262) 54
RW_Cont (263) 78 139
RW_Cp (264) 63
RW_Delete (265) 91
RW_Destiny (266) 69 70 174 175
RW_Edit (267) 71
RW_Exec (268) 79 80
RW_Fdisk (269) 81
RW_File (270) 191
RW_Filen (271) 37 38
RW_Find (272) 96
RW_Fit (273) 90
RW_Grp (274) 44 45 160 161
RW_Id (275) 36 51 59 68 76 101 112 114 120 136 143 148 156 176 178
    184 194 202 211 217
RW_Idn (276) 221
RW_Login (277) 104
RW_Logout (278) 113
RW_Loss (279) 114
RW_Mkdir (280) 115
RW_Mkdisk (281) 122
RW_Mkfile (282) 131
RW_Mkfs (283) 140
RW_Mkgrp (284) 145
RW_Mkusr (285) 151
RW_Mount (286) 162
RW_Mv (287) 169
RW_Name (288) 92 93 102 103 129 130 149 150 167 168 185 186 190 191
    209 210
RW_P (289) 89 121 137
RW_Path (290) 49 50 57 58 66 67 74 75 79 80 86 87 99 100 118 119 127
    128 134 135 165 166 172 173 182 183 192 193 200 201 204 205
RW_Pause (291) 177
RW_Pwd (292) 109 110 111 157 158 159
RW_R (293) 53 60
RW_Recovery (294) 178
RW_Ren (295) 179
RW_Rep (296) 187
RW_Rf (297) 203
RW_Rm (298) 197
RW_Rmdisk (299) 204 205
RW_Rmgrp (300) 206
RW_Rmusr (301) 212
RW_Ruta (302) 195 196
RW_Size (303) 77 84 125 138
RW_Type (304) 88 89 144
RW_Ugo (305) 52
RW_Unit (306) 85 126
RW_Unmount (307) 218
RW_Usr (308) 42 43 61 62 107 108 154 155 215 216
SYM_Arrow (309) 36 37 38 42 43 44 45 49 50 51 52 57 58 59 61 62 66
    67 68 69 70 74 75 76 77 78 79 80 84 85 86 87 88 89 90 91 92 93
    94 95 99 100 101 102 103 107 108 109 110 111 112 114 118 119 120
    125 126 127 128 129 130 134 135 136 138 139 143 144 148 149 150
    154 155 156 157 158 159 160 161 165 166 167 168 172 173 174 175
    176 178 182 183 184 185 186 190 191 192 193 194 195 196 200 201
    202 204 205 209 210 211 215 216 217 221
SYM_Ampersand (310) 34 35 40 41 47 48 55 56 64 65 72 73 79 80 82 83
    97 98 105 106 114 116 117 123 124 132 133 141 142 146 147 152 153
    163 164 170 171 178 180 181 188 189 198 199 204 205 207 208 213
    214 219 220
SYM_Hyphen (311) 95
RE_Delete (312) 91 144
RE_Fit (313) 90
RE_Id (314) 36 42 44 51 59 61 68 76 93 101 107 109 112 114 120 136
    143 148 149 154 156 157 160 168 176 178 184 194 202 209 211 215
    217 221
RE_Name (315) 190
RE_Name2 (316) 102 129 185
RE_Number (317) 52 77 84 94 95 111 125 138 159
RE_Path (318) 38 49 57 66 69 74 79 86 99 118 128 134 165 172 174 182
    192 195 200 205
RE_String (319) 37 43 45 50 58 62 67 70 75 78 80 87 92 100 103 108
    110 119 127 130 135 139 150 155 158 161 166 167 173 175 183 186
    193 196 201 204 210 216
RE_Type (320) 88
RE_Unit (321) 85 126


No terminales con las reglas donde aparecen

$accept (67)
    en la izquierda: 0
Start (68)
    en la izquierda: 1, en la derecha: 0
NT_Instructions (69)
    en la izquierda: 2 3, en la derecha: 1 2
NT_Instruction (70)
    en la izquierda: 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21
    22 23 24 25 26 27 28 29 30 31 32, en la derecha: 2 3
NT_Cat (71)
    en la izquierda: 33, en la derecha: 4
NT_Parameterscat (72)
    en la izquierda: 34 35, en la derecha: 33 34
NT_Parametercat (73)
    en la izquierda: 36 37 38, en la derecha: 34 35
NT_Chgrp (74)
    en la izquierda: 39, en la derecha: 5
NT_Parameterschgrp (75)
    en la izquierda: 40 41, en la derecha: 39 40
NT_Parameterchgrp (76)
    en la izquierda: 42 43 44 45, en la derecha: 40 41
NT_Chmod (77)
    en la izquierda: 46, en la derecha: 6
NT_Parameterschmod (78)
    en la izquierda: 47 48, en la derecha: 46 47
NT_Parameterchmod (79)
    en la izquierda: 49 50 51 52 53, en la derecha: 47 48
NT_Chown (80)
    en la izquierda: 54, en la derecha: 7
NT_Parameterschown (81)
    en la izquierda: 55 56, en la derecha: 54 55
NT_Parameterchown (82)
    en la izquierda: 57 58 59 60 61 62, en la derecha: 55 56
NT_Cp (83)
    en la izquierda: 63, en la derecha: 8
NT_Parameterscp (84)
    en la izquierda: 64 65, en la derecha: 63 64
NT_Parametercp (85)
    en la izquierda: 66 67 68 69 70, en la derecha: 64 65
NT_Edit (86)
    en la izquierda: 71, en la derecha: 9
NT_Parametersedit (87)
    en la izquierda: 72 73, en la derecha: 71 72
NT_Parameteredit (88)
    en la izquierda: 74 75 76 77 78, en la derecha: 72 73
NT_Exec (89)
    en la izquierda: 79 80, en la derecha: 10
NT_Fdisk (90)
    en la izquierda: 81, en la derecha: 11
NT_Parametersfdisk (91)
    en la izquierda: 82 83, en la derecha: 81 82
NT_Parameterfdisk (92)
    en la izquierda: 84 85 86 87 88 89 90 91 92 93 94 95, en la derecha:
    82 83
NT_Find (93)
    en la izquierda: 96, en la derecha: 12
NT_Parametersfind (94)
    en la izquierda: 97 98, en la derecha: 96 97
NT_Parameterfind (95)
    en la izquierda: 99 100 101 102 103, en la derecha: 97 98
NT_Login (96)
    en la izquierda: 104, en la derecha: 13
NT_Parameterslogin (97)
    en la izquierda: 105 106, en la derecha: 104 105
NT_Parameterlogin (98)
    en la izquierda: 107 108 109 110 111 112, en la derecha: 105 106
NT_Logout (99)
    en la izquierda: 113, en la derecha: 14
NT_Loss (100)
    en la izquierda: 114, en la derecha: 15
NT_Mkdir (101)
    en la izquierda: 115, en la derecha: 16
NT_Parametersmkdir (102)
    en la izquierda: 116 117, en la derecha: 115 116
NT_Parametermkdir (103)
    en la izquierda: 118 119 120 121, en la derecha: 116 117
NT_Mkdisk (104)
    en la izquierda: 122, en la derecha: 17
NT_Parametersmkdisk (105)
    en la izquierda: 123 124, en la derecha: 122 123
NT_Parametermkdisk (106)
    en la izquierda: 125 126 127 128 129 130, en la derecha: 123 124
NT_Mkfile (107)
    en la izquierda: 131, en la derecha: 18
NT_Parametersmkfile (108)
    en la izquierda: 132 133, en la derecha: 131 132
NT_Parametermkfile (109)
    en la izquierda: 134 135 136 137 138 139, en la derecha: 132 133
NT_Mkfs (110)
    en la izquierda: 140, en la derecha: 19
NT_Parametersmkfs (111)
    en la izquierda: 141 142, en la derecha: 140 141
NT_Parametermkfs (112)
    en la izquierda: 143 144, en la derecha: 141 142
NT_Mkgrp (113)
    en la izquierda: 145, en la derecha: 20
NT_Parametersmkgrp (114)
    en la izquierda: 146 147, en la derecha: 145 146
NT_Parametermkgrp (115)
    en la izquierda: 148 149 150, en la derecha: 146 147
NT_Mkusr (116)
    en la izquierda: 151, en la derecha: 21
NT_Parametersmkusr (117)
    en la izquierda: 152 153, en la derecha: 151 152
NT_Parametermkusr (118)
    en la izquierda: 154 155 156 157 158 159 160 161, en la derecha:
    152 153
NT_Mount (119)
    en la izquierda: 162, en la derecha: 22
NT_Parametersmount (120)
    en la izquierda: 163 164, en la derecha: 162 163
NT_Parametermount (121)
    en la izquierda: 165 166 167 168, en la derecha: 163 164
NT_Mv (122)
    en la izquierda: 169, en la derecha: 23
NT_Parametersmv (123)
    en la izquierda: 170 171, en la derecha: 169 170
NT_Parametermv (124)
    en la izquierda: 172 173 174 175 176, en la derecha: 170 171
NT_Pause (125)
    en la izquierda: 177, en la derecha: 24
NT_Recovery (126)
    en la izquierda: 178, en la derecha: 25
NT_Ren (127)
    en la izquierda: 179, en la derecha: 27
NT_Parametersren (128)
    en la izquierda: 180 181, en la derecha: 179 180
NT_Parameterren (129)
    en la izquierda: 182 183 184 185 186, en la derecha: 180 181
NT_Rep (130)
    en la izquierda: 187, en la derecha: 28
NT_Parametersrep (131)
    en la izquierda: 188 189, en la derecha: 187 188
NT_Parameterrep (132)
    en la izquierda: 190 191 192 193 194 195 196, en la derecha: 188
    189
NT_Rm (133)
    en la izquierda: 197, en la derecha: 26
NT_Parametersrm (134)
    en la izquierda: 198 199, en la derecha: 197 198
NT_Parameterrm (135)
    en la izquierda: 200 201 202 203, en la derecha: 198 199
NT_Rmdisk (136)
    en la izquierda: 204 205, en la derecha: 29
NT_Rmgrp (137)
    en la izquierda: 206, en la derecha: 30
NT_Parametersrmgrp (138)
    en la izquierda: 207 208, en la derecha: 206 207
NT_Parameterrmgrp (139)
    en la izquierda: 209 210 211, en la derecha: 207 208
NT_Rmusr (140)
    en la izquierda: 212, en la derecha: 31
NT_Parametersrmusr (141)
    en la izquierda: 213 214, en la derecha: 212 213
NT_Parameterrmusr (142)
    en la izquierda: 215 216 217, en la derecha: 213 214
NT_Unmount (143)
    en la izquierda: 218, en la derecha: 32
NT_Parametersunmount (144)
    en la izquierda: 219 220, en la derecha: 218 219
NT_Parameterunmount (145)
    en la izquierda: 221, en la derecha: 219 220


Estado 0

    0 $accept: . Start $end

    RW_Cat       desplazar e ir al estado 1
    RW_Chgrp     desplazar e ir al estado 2
    RW_Chmod     desplazar e ir al estado 3
    RW_Chown     desplazar e ir al estado 4
    RW_Cp        desplazar e ir al estado 5
    RW_Edit      desplazar e ir al estado 6
    RW_Exec      desplazar e ir al estado 7
    RW_Fdisk     desplazar e ir al estado 8
    RW_Find      desplazar e ir al estado 9
    RW_Login     desplazar e ir al estado 10
    RW_Logout    desplazar e ir al estado 11
    RW_Loss      desplazar e ir al estado 12
    RW_Mkdir     desplazar e ir al estado 13
    RW_Mkdisk    desplazar e ir al estado 14
    RW_Mkfile    desplazar e ir al estado 15
    RW_Mkfs      desplazar e ir al estado 16
    RW_Mkgrp     desplazar e ir al estado 17
    RW_Mkusr     desplazar e ir al estado 18
    RW_Mount     desplazar e ir al estado 19
    RW_Mv        desplazar e ir al estado 20
    RW_Pause     desplazar e ir al estado 21
    RW_Recovery  desplazar e ir al estado 22
    RW_Ren       desplazar e ir al estado 23
    RW_Rep       desplazar e ir al estado 24
    RW_Rm        desplazar e ir al estado 25
    RW_Rmdisk    desplazar e ir al estado 26
    RW_Rmgrp     desplazar e ir al estado 27
    RW_Rmusr     desplazar e ir al estado 28
    RW_Unmount   desplazar e ir al estado 29

    Start            ir al estado 30
    NT_Instructions  ir al estado 31
    NT_Instruction   ir al estado 32
    NT_Cat           ir al estado 33
    NT_Chgrp         ir al estado 34
    NT_Chmod         ir al estado 35
    NT_Chown         ir al estado 36
    NT_Cp            ir al estado 37
    NT_Edit          ir al estado 38
    NT_Exec          ir al estado 39
    NT_Fdisk         ir al estado 40
    NT_Find          ir al estado 41
    NT_Login         ir al estado 42
    NT_Logout        ir al estado 43
    NT_Loss          ir al estado 44
    NT_Mkdir         ir al estado 45
    NT_Mkdisk        ir al estado 46
    NT_Mkfile        ir al estado 47
    NT_Mkfs          ir al estado 48
    NT_Mkgrp         ir al estado 49
    NT_Mkusr         ir al estado 50
    NT_Mount         ir al estado 51
    NT_Mv            ir al estado 52
    NT_Pause         ir al estado 53
    NT_Recovery      ir al estado 54
    NT_Ren           ir al estado 55
    NT_Rep           ir al estado 56
    NT_Rm            ir al estado 57
    NT_Rmdisk        ir al estado 58
    NT_Rmgrp         ir al estado 59
    NT_Rmusr         ir al estado 60
    NT_Unmount       ir al estado 61


Estado 1

   33 NT_Cat: RW_Cat . NT_Parameterscat

    SYM_Ampersand  desplazar e ir al estado 62

    NT_Parameterscat  ir al estado 63


Estado 2

   39 NT_Chgrp: RW_Chgrp . NT_Parameterschgrp

    SYM_Ampersand  desplazar e ir al estado 64

    NT_Parameterschgrp  ir al estado 65


Estado 3

   46 NT_Chmod: RW_Chmod . NT_Parameterschmod

    SYM_Ampersand  desplazar e ir al estado 66

    NT_Parameterschmod  ir al estado 67


Estado 4

   54 NT_Chown: RW_Chown . NT_Parameterschown

    SYM_Ampersand  desplazar e ir al estado 68

    NT_Parameterschown  ir al estado 69


Estado 5

   63 NT_Cp: RW_Cp . NT_Parameterscp

    SYM_Ampersand  desplazar e ir al estado 70

    NT_Parameterscp  ir al estado 71


Estado 6

   71 NT_Edit: RW_Edit . NT_Parametersedit

    SYM_Ampersand  desplazar e ir al estado 72

    NT_Parametersedit  ir al estado 73


Estado 7

   79 NT_Exec: RW_Exec . SYM_Ampersand RW_Path SYM_Arrow RE_Path
   80        | RW_Exec . SYM_Ampersand RW_Path SYM_Arrow RE_String

    SYM_Ampersand  desplazar e ir al estado 74


Estado 8

   81 NT_Fdisk: RW_Fdisk . NT_Parametersfdisk

    SYM_Ampersand  desplazar e ir al estado 75

    NT_Parametersfdisk  ir al estado 76


Estado 9

   96 NT_Find: RW_Find . NT_Parametersfind

    SYM_Ampersand  desplazar e ir al estado 77

    NT_Parametersfind  ir al estado 78


Estado 10

  104 NT_Login: RW_Login . NT_Parameterslogin

    SYM_Ampersand  desplazar e ir al estado 79

    NT_Parameterslogin  ir al estado 80


Estado 11

  113 NT_Logout: RW_Logout .

    $default  reduce usando la regla 113 (NT_Logout)


Estado 12

  114 NT_Loss: RW_Loss . SYM_Ampersand RW_Id SYM_Arrow RE_Id

    SYM_Ampersand  desplazar e ir al estado 81


Estado 13

  115 NT_Mkdir: RW_Mkdir . NT_Parametersmkdir

    SYM_Ampersand  desplazar e ir al estado 82

    NT_Parametersmkdir  ir al estado 83


Estado 14

  122 NT_Mkdisk: RW_Mkdisk . NT_Parametersmkdisk

    SYM_Ampersand  desplazar e ir al estado 84

    NT_Parametersmkdisk  ir al estado 85


Estado 15

  131 NT_Mkfile: RW_Mkfile . NT_Parametersmkfile

    SYM_Ampersand  desplazar e ir al estado 86

    NT_Parametersmkfile  ir al estado 87


Estado 16

  140 NT_Mkfs: RW_Mkfs . NT_Parametersmkfs

    SYM_Ampersand  desplazar e ir al estado 88

    NT_Parametersmkfs  ir al estado 89


Estado 17

  145 NT_Mkgrp: RW_Mkgrp . NT_Parametersmkgrp

    SYM_Ampersand  desplazar e ir al estado 90

    NT_Parametersmkgrp  ir al estado 91


Estado 18

  151 NT_Mkusr: RW_Mkusr . NT_Parametersmkusr

    SYM_Ampersand  desplazar e ir al estado 92

    NT_Parametersmkusr  ir al estado 93


Estado 19

  162 NT_Mount: RW_Mount . NT_Parametersmount

    SYM_Ampersand  desplazar e ir al estado 94

    NT_Parametersmount  ir al estado 95


Estado 20

  169 NT_Mv: RW_Mv . NT_Parametersmv

    SYM_Ampersand  desplazar e ir al estado 96

    NT_Parametersmv  ir al estado 97


Estado 21

  177 NT_Pause: RW_Pause .

    $default  reduce usando la regla 177 (NT_Pause)


Estado 22

  178 NT_Recovery: RW_Recovery . SYM_Ampersand RW_Id SYM_Arrow RE_Id

    SYM_Ampersand  desplazar e ir al estado 98


Estado 23

  179 NT_Ren: RW_Ren . NT_Parametersren

    SYM_Ampersand  desplazar e ir al estado 99

    NT_Parametersren  ir al estado 100


Estado 24

  187 NT_Rep: RW_Rep . NT_Parametersrep

    SYM_Ampersand  desplazar e ir al estado 101

    NT_Parametersrep  ir al estado 102


Estado 25

  197 NT_Rm: RW_Rm . NT_Parametersrm

    SYM_Ampersand  desplazar e ir al estado 103

    NT_Parametersrm  ir al estado 104


Estado 26

  204 NT_Rmdisk: RW_Rmdisk . SYM_Ampersand RW_Path SYM_Arrow RE_String
  205          | RW_Rmdisk . SYM_Ampersand RW_Path SYM_Arrow RE_Path

    SYM_Ampersand  desplazar e ir al estado 105


Estado 27

  206 NT_Rmgrp: RW_Rmgrp . NT_Parametersrmgrp

    SYM_Ampersand  desplazar e ir al estado 106

    NT_Parametersrmgrp  ir al estado 107


Estado 28

  212 NT_Rmusr: RW_Rmusr . NT_Parametersrmusr

    SYM_Ampersand  desplazar e ir al estado 108

    NT_Parametersrmusr  ir al estado 109


Estado 29

  218 NT_Unmount: RW_Unmount . NT_Parametersunmount

    SYM_Ampersand  desplazar e ir al estado 110

    NT_Parametersunmount  ir al estado 111


Estado 30

    0 $accept: Start . $end

    $end  desplazar e ir al estado 112


Estado 31

    1 Start: NT_Instructions .
    2 NT_Instructions: NT_Instructions . NT_Instruction

    RW_Cat       desplazar e ir al estado 1
    RW_Chgrp     desplazar e ir al estado 2
    RW_Chmod     desplazar e ir al estado 3
    RW_Chown     desplazar e ir al estado 4
    RW_Cp        desplazar e ir al estado 5
    RW_Edit      desplazar e ir al estado 6
    RW_Exec      desplazar e ir al estado 7
    RW_Fdisk     desplazar e ir al estado 8
    RW_Find      desplazar e ir al estado 9
    RW_Login     desplazar e ir al estado 10
    RW_Logout    desplazar e ir al estado 11
    RW_Loss      desplazar e ir al estado 12
    RW_Mkdir     desplazar e ir al estado 13
    RW_Mkdisk    desplazar e ir al estado 14
    RW_Mkfile    desplazar e ir al estado 15
    RW_Mkfs      desplazar e ir al estado 16
    RW_Mkgrp     desplazar e ir al estado 17
    RW_Mkusr     desplazar e ir al estado 18
    RW_Mount     desplazar e ir al estado 19
    RW_Mv        desplazar e ir al estado 20
    RW_Pause     desplazar e ir al estado 21
    RW_Recovery  desplazar e ir al estado 22
    RW_Ren       desplazar e ir al estado 23
    RW_Rep       desplazar e ir al estado 24
    RW_Rm        desplazar e ir al estado 25
    RW_Rmdisk    desplazar e ir al estado 26
    RW_Rmgrp     desplazar e ir al estado 27
    RW_Rmusr     desplazar e ir al estado 28
    RW_Unmount   desplazar e ir al estado 29

    $default  reduce usando la regla 1 (Start)
